apps/web-rewards/src/app/layout.module.css
.container {
  display: grid;
  grid-auto-flow: row;
  grid-template-rows: auto 1fr auto;
  flex: 1;
  height: 100%;
  width: 100%;
}

.header {
  align-items: center;
  display: flex;
  justify-content: center;
  flex-direction: column;
  padding: 8px 15px;
  gap: 15px;
  width: 100%;
}

.decorator-container {
  align-items: center;
  display: flex;
  gap: 25px;
  justify-content: center;
}

